# nephrite4

./: .gitignore  Cargo.toml  shell.nix
cli/: Cargo.toml
common/: Cargo.toml
common/src/: conf.rs  error.rs  git.rs  lib.rs  proj.rs  store.rs  util.rs
common/src/proj/: anno.rs  manifest.rs
query/: Cargo.toml
query/src/: db.rs  error.rs  index.rs  lib.rs
query/src/db/: search.rs  types.rs
query/src/index/: cut.rs  stop_word_cn.txt  stop_word_ja.txt  tika.rs
query/src/index/ipadic-utf8/: char.bin.zst  matrix.bin.zst  unk.dic.zst
res/psql/: idx.sql  init.sql  q.sql  tab.sql  trig.sql
