[package]
name = "nephrite4-common"
version = "0.1.0"
authors = ["Yu Changyuan <reivzy@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
# NOTE: should depnend on same serde version, here is 1.0
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.11.1"
serde_yaml = "0.8"

hex = "0.4"

dotenv = "0.15"

log = "0.4"
env_logger = "0.8.3"

rust-crypto = "^0.2"

glob = "0.3"
encoding = "0.2"
tree_magic = "0.2"
filetime = "0.2"

time = "0.2"

lazy_static = "1.4"

chrono = "0.4"
