[package]
name = "nephrite4-query"
version = "0.1.0"
authors = ["Yu Changyuan <reivzy@gmail.com>"]
edition = "2018"

[dependencies]
nephrite4-common = { path = "../common" }

serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_cbor = "0.11.1"

dotenv = "0.15"
log = "0.4"
env_logger = "0.8.3"

postgres = { version = "0.19", features = ["with-serde_json-1"] }
postgres-types = "0.2"

bytes = "1"
clap = "2"

# for word cut

# mecab fail to run, may due use of non utf-8 dic
#mecab = "0.1"
notmecab = "0.5"

jieba-rs = "0.6"
rust-stemmers = "^1.0"

whatlang = "0.11.1"

# lingua is too large
#lingua = "1.1.0"

lazy_static = "1.4"
substring = "1.4"

zstd = "0.6"

# tika
j4rs = "0.13"
